Updated github pages, added javadoc and basic doc toc